--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.main.allow-bean-definition-overriding=true
 spring.application.name = EMPLOYEE-SERVICE
 server.port = 8083
-app.db.bucketName = employee
+app.db.bucketName = Employee
 spring.config.import=configserver:http://localhost:8087
 
 
